finished chapter 5
