# src/shared/infra/http/routes/authenticate.routes.ts
@@ -1,7 +1,7 @@
 import { Router } from 'express';
 
-import { AuthenticateUserController } from '@modules/accounts/userCases/authenticateUser/AuthenticateUserController';
-import { RefreshTokenController } from '@modules/accounts/userCases/refreshToken/RefreshTokenController';
+import { AuthenticateUserController } from '@modules/accounts/useCases/authenticateUser/AuthenticateUserController';
+import { RefreshTokenController } from '@modules/accounts/useCases/refreshToken/RefreshTokenController';
 
 const authenticateRoutes = Router();
 const authenticateUserController = new AuthenticateUserController();
